# neo-recomp

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: ci.yml
docs/: 68k_correctness_tracker.md  architecture.md  audio_mame_reuse_plan.md  neogeo_68k_finish_plan.md  ngdevkit_symbol_oracle.md  progress.md  recompiler_discovery_passes_plan.md  segagenesisrecomp_contrast.md
games/: mslug.mined_record_tables.toml  mslug.residual.toml  mslug.toml  nam1975.toml  ngdevkit_example.toml
games/oracle/: README.md  oracle.S  oracle.ld  oracle.toml
include/ngrecomp/: generated_abi.h  m68k_state.h  neogeo_audio.h  neogeo_runtime.h  neogeo_video.h
recompiler/src/: c_emitter.c  c_emitter.h  dispatch_audit.c  dispatch_audit.h  function_discovery.c  function_discovery.h  game_config.c  game_config.h  m68k_analyze.c  m68k_analyze.h  m68k_cycles.c  m68k_cycles.h  m68k_decode.c  m68k_decode.h  m68k_stub.c  m68k_stub.h  m68k_validate.c  m68k_validate.h  main.c  neogeo_map.c  neogeo_map.h  p_rom.c  p_rom.h
runtime/src/: neogeo_audio.c  neogeo_runtime.c  neogeo_video.c  neogeo_ym2610.cpp  neogeo_ym2610.h
scripts/: build_oracle_fixture.py  check_discovery_superset.py  check_mslug_discovery_golden.sh  generate_residual_toml.py  mame_trace_capture.py  mine_record_tables.py  mslug  ngdevkit_symbol_oracle.py  run_mslug_headless.sh  run_mslug_sdl.sh  runtime_miss_suggestions.py  trace_pc_residual.py
tests/: CMakeLists.txt  exec_fixture.h  generate_exec_fixture.c  test_c_emitter.c  test_dispatch_audit.c  test_function_discovery.c  test_game_config.c  test_generated_exec.c  test_generated_smoke_harness.c  test_generated_smoke_trampoline.c  test_m68k_decode.c  test_m68k_validate.c  test_neogeo_audio.c  test_neogeo_video.c  test_ngdevkit_symbol_oracle.py  test_opcode_sweep.c  test_oracle_discovery.c  test_oracle_fixture.py  test_p_rom.c  test_record_table_miner.py  test_runtime_interrupts.c  test_snapshot_debug.py  test_snapshot_frame.py  test_trace_tools.py
tests/golden/: mslug_discovery.txt  mslug_dispatch_audit.txt
tests/oracle/: oracle_functions.txt  oracle_relocs.txt
tools/: audio_probe.c  generate_bios_recomp.c  generated_smoke_harness.c  render_snapshot_debug.py  render_snapshot_frame.c  sdl_live_host.c  sdl_snapshot_viewer.c
